[project]
name = "mdutils"
authors = [{name = "Ignacio Pickering", email = "ign.pickering@gmail.com"}]
license = {file = "LICENSE"}
description = "Python package mdutils"
requires-python = ">=3.8"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/IgnacioJPickering/mdutils.git"
repository = "https://github.com/IgnacioJPickering/mdutils.git"
documentation = "https://github.com/IgnacioJPickering/mdutils.git"

[project.scripts]
mu="mdutils.cli:app"

[tool.setuptools_scm]
version_file = "mdutils/_version.py"
fallback_version="0.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdutils*"]

[tool.black]
line-length = 88
target_version = ["py311"]

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
python_version = '3.11'

[tool.pytest.ini_options]
markers = ["fast"]
